# labexercises-terrinamatsu

./: .gitignore  README.md
DLA/: CMakeLists.txt
DLA/include/: Image.h  Walker.h
DLA/src/: Image.cpp  Walker.cpp  main.cpp
FirstNGL/include/: NGLScene.h
FirstNGL/shaders/: ColourFragment.glsl  ColourVertex.glsl
FirstNGL/src/: NGLScene.cpp
FirstQT_GUI/: CMakeLists.txt
FirstQT_GUI/src/: MainWindow.cpp
FirstQT_GUI/ui/: MainWindow.ui
Image/: CMakeLists.txt
Image/include/: Image.h
Image/src/: Image.cpp  main.cpp
Image/tests/: ImageTests.cpp
Particle/: CMakeLists.txt
Particle/include/: Emitter.h  Particle.h  Vec3.h
Particle/src/: Emitter.cpp  Vec3.cpp  main.cpp
Particle/tests/: ParticleTests.cpp
ParticleGUI/: CMakeLists.txt
ParticleGUI/include/: Emitter.h  MainWindow.h  NGLScene.h
ParticleGUI/shaders/: ColourVertex.glsl
ParticleGUI/src/: Emitter.cpp  MainWindow.cpp  NGLScene.cpp
ParticleGUI/ui/: MainWindow.ui
ParticleNGL/: CMakeLists.txt
ParticleNGL/include/: Emitter.h  NGLScene.h  Particle.h
ParticleNGL/shaders/: ColourVertex.glsl
ParticleNGL/src/: Emitter.cpp
ParticleSOA/: CMakeLists.txt
ParticleSOA/include/: Emitter.h  Particle.h  Random.h
ParticleSOA/shaders/: ColourVertex.glsl
ParticleSOA/src/: Emitter.cpp  NGLScene.cpp
build-FirstQT_GUI-Desktop_Qt_GCC_64bit-Debug/: CMakeCache.txt.prev  FirstQT_GUI
build-FirstQT_GUI-Desktop_Qt_GCC_64bit-Debug/FirstQT_GUI_autogen/: moc_predefs.h
build-ParticleGUI-Desktop_Qt_GCC_64bit-Debug/: CMakeCache.txt.prev  ParticleGUI
(+19 files in other folders)
